--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,16 @@
+
+
+/*
 .topnav{
       background-color: grey;
       overflow: -hidden;
   }
+
   .topnav a{
       float: left;
       display: block;
      /* color: #f2f2f2;
-     */
+     
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
@@ -18,7 +22,7 @@
   .topnav a:hover{
       background-color:linen;
 }
- /* .description{
+  .description{
      text-align: center;
      font-size: 15px;
      font-style: normal;
